--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:TRYy4DauJWLxeqQAvWjVTgHtE+fpZVwhIpgsFZsmwE0=
+APP_KEY=base64:ilFEmTEQVYQYtj1oGiF/9SAE2IOmKbhrmyaAsB3wRLA=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=LARAVEL
 DB_USERNAME=root
-DB_PASSWORD=password
+DB_PASSWORD=pass
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,7 +23,7 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_MAILER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
 MAIL_USERNAME=null
