--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=LARAVEL
-DB_USERNAME=root
+DB_USERNAME=admin
 DB_PASSWORD=pass
 
 BROADCAST_DRIVER=log
