--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=MoreThanBillion
 APP_ENV=local
 APP_KEY=base64:ilFEmTEQVYQYtj1oGiF/9SAE2IOmKbhrmyaAsB3wRLA=
 APP_DEBUG=true
